--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.36.0",
     "@tailwindcss/postcss": "4.1.7",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@types/node": "^22.15.18",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
+    "@untitledui/icons": "^0.0.19",
+    "@untitledui/icons-react": "^0.3.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -24,16 +30,19 @@
     "drizzle-orm": "^0.43.1",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
+    "motion": "^12.23.26",
     "next": "15.6.0-canary.59",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
     "radix-ui": "^1.4.2",
     "react": "19.1.0",
+    "react-aria-components": "^1.14.0",
     "react-dom": "19.1.0",
+    "resend": "^6.7.0",
     "server-only": "^0.0.1",
     "stripe": "^18.1.0",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "4.1.7",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
